# amc

./: .canonical_path  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  journal.md  pyproject.toml
configs/: bls_calendar.csv  fomc_calendar.csv  fred_series.yaml  gdelt_themes.yaml  premium_basket.yaml  scenarios.yaml  trends_terms.yaml  universe.yaml
configs/templates/: amc_coin_trades.csv  amc_scrap_lots.csv  amc_till_daily.csv
licensing/: 1_greysheet_cdn.md  2_fair_economy_forexfactory.md  3_johnson_matthey.md  README.md
notebooks/: 01_data_audit.ipynb  02_fomc_indicator_irf.ipynb  03_fomc_surprise_irf.ipynb  04_geopol_dxy_irf.ipynb  05_fomc_robustness.ipynb
plans/: 00_roadmap.md  phase_0_setup.md  phase_10_pgm_supply_shocks.md  phase_1_baseline.md  phase_2_events_local_projections.md  phase_3_text_clustering.md  phase_4_multimodal_transformer.md  phase_5_causal_ml_triangulation.md  phase_6_validation_writeup.md  phase_7_amc_program.md  phase_8_ssl_probing.md  phase_9_realyield_event_study.md  research_backlog.md
results/: amc_data_acquisition_program.md  amc_derive_vs_buy_engineering.md  amc_paid_data_review.md  amc_spread_floor_engine_spec.md  phase1_baseline.md  phase1_negative_ic_diagnosis.md  phase2_review.md  phase2_scenarios.md  phase3_backfill_plan.md  phase3_cluster_lift_design.md  phase3_cluster_lift_readout.csv  phase3_gdelt_data_assessment.md  phase3_phase3_optC_tone_lag1_2024split_dominant_topics.csv  phase3_phase3_optC_tone_lag1_2024split_forward_stats.csv  phase3_phase3_optC_tone_lag1_2024split_representative_dates.csv  phase3_theme_topic_map.csv  phase3_writeup.md  phase5_cate_regimes.csv  phase5_dml_vs_lp_first_pass.md  phase5_scenario_master.csv  phase5_subsample_ates.csv  phase5_subsample_stability.csv  phase5_svar_cate_readout.md  phase5_svar_irfs.csv  phase5_triangulation.md  phase6_findings.md  phase6_holdout_metrics.csv  phase6_methodology.md  phase6_scenario_holdout.csv  phase6_validation.md
results/harness_export/: manifest.json  run_feature_importances.parquet  run_predictions.parquet  runs.parquet
scripts/: annotate_pilot.py  backfill_gdelt.py  backfill_titles.py  backup_db.py  compact_headlines.py  coverage_audit.py  export_harness.py  install_schedule.sh  lang_gate_count.py  lang_precision_batch.py  make_owner_report.py  phase1_diagnose.py  phase3_cluster_lift.py  phase3_gkg_enrichment_probe.py  phase3_pipeline.py  phase3_slug_quality.py  phase3_smoke.py  phase5_cate_regimes.py  phase5_master_table.py  phase5_subsample_stability.py  phase6_holdout.py  phase6_scenario_holdout.py  quarantine_barred_sources.py  run_collectors.py
src/metals/: __init__.py  refresh.py  train.py
src/metals/annotate/: __init__.py  checks.py  multilang.py  pilot.py  precision.py  sample.py  schema.py  titles.py
src/metals/data/: __init__.py  amc_ledger.py  bls_calendar.py  cme_daily.py  coin_premiums.py  config.py  consensus.py  cot.py  db.py  events.py  fomc_dgs2.py  fomc_surprises.py  fred.py  gdelt.py  gpr.py  jm_pgm.py  prices.py  text_prep.py  trends.py
src/metals/eval/: __init__.py  cluster_labeling.py  clusters.py  cv.py  harness.py  probes.py
src/metals/features/: assemble.py  context.py  embeddings.py  inventory.py  leakage.py  loaders.py  macro.py  regimes.py  returns.py  scenarios.py  spreads.py  ssl_views.py  text_daily.py  topics.py
src/metals/models/: __init__.py  causal.py  clustering.py  factor_ssl.py  lgbm_vol.py  lp.py  spread_floor.py  svar.py
tests/: test_annotate_pilot.py  test_annotate_precision.py  test_backfill_gdelt.py  test_backfill_titles.py  test_cluster_labeling.py  test_config.py  test_cv.py  test_data_amc_ledger.py  test_data_bls_calendar.py  test_data_cme_daily.py  test_data_coin_premiums.py  test_data_consensus.py  test_data_cot.py  test_data_events.py  test_data_fomc_dgs2.py  test_data_fomc_surprises.py  test_data_fred.py  test_data_gdelt.py  test_data_jm_pgm.py  test_data_text_prep.py  test_data_trends.py  test_eval_clusters.py  test_eval_probes.py  test_features_assemble.py  test_features_context.py  test_features_embeddings.py  test_features_leakage.py  test_features_loaders.py  test_features_macro.py  test_features_regimes.py  test_features_returns.py  test_features_scenarios.py  test_features_spreads.py  test_features_ssl_views.py  test_features_text_daily.py  test_features_theme_prevalence.py  test_features_topics.py  test_harness.py  test_harness_importances.py  test_lgbm_vol.py  (+13 more)
(+43 files in other folders)
