[project]
name = "metals"
version = "0.1.0"
description = "Quantitative research on drivers of precious metals prices"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alex McMurtry", email = "amcmurtry@uchicago.edu" }]
dependencies = [
    # Data and storage
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "scipy>=1.13",
    # Stats and classical ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "arch>=7.0",
    # Deep learning
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    # Clustering and topic modeling
    "hdbscan>=0.8",
    "umap-learn>=0.5",
    "bertopic>=0.16",
    # Causal inference
    "econml>=0.15",
    "doubleml>=0.9",
    # Data sources
    "yfinance>=0.2",
    "fredapi>=0.5",
    "requests>=2.31",
    "xlrd>=2.0",
    "openpyxl>=3.1",
    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "jupyterlab>=4.1",
    "ipykernel>=6.29",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src/metals"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "fredapi.*",
    "hdbscan.*",
    "umap.*",
    "bertopic.*",
    "econml.*",
    "doubleml.*",
    "lightgbm.*",
    "arch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
