[project]
name = "metals"
version = "0.1.0"
description = "Quantitative research on drivers of precious metals prices"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alex McMurtry", email = "amcmurtry@uchicago.edu" }]
dependencies = [
    # Data and storage
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "scipy>=1.13",
    # Stats and classical ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "arch>=7.0",
    # Deep learning
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    # Clustering and topic modeling
    "hdbscan>=0.8",
    "umap-learn>=0.5",
    "bertopic>=0.16",
    # Causal inference
    "econml>=0.15",
    "doubleml>=0.9",
    # Data sources
    "yfinance>=0.2",
    "fredapi>=0.5",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "xlrd>=2.0",
    "openpyxl>=3.1",
    "google-cloud-bigquery>=3.20",
    "google-cloud-bigquery-storage>=2.24",
    "db-dtypes>=1.2",
    # LLM cluster labelling (Phase 3 label stage)
    "anthropic>=0.60",
    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "reportlab>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "jupyterlab>=4.1",
    "ipykernel>=6.29",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
# Capitalised math-notation variables (X, E, Z, X_std, X_train, ...) are
# idiomatic in the numeric / ML code; do not force them lowercase.
ignore = ["N803", "N806"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src/metals"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "fredapi.*",
    "bs4.*",
    "pandas.*",
    "yaml.*",
    "scipy.*",
    "statsmodels.*",
    "sklearn.*",
    "hdbscan.*",
    "umap.*",
    "bertopic.*",
    "econml.*",
    "doubleml.*",
    "lightgbm.*",
    "arch.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
